--- a/dz.html
+++ b/dz.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <script src="test.js"></script>
+    <title>ILDUS_DZ3</title>
 </head>
 <body>
-    
+    <img src="http://static.orgpage.ru/socialnewsphotos/88/88005a9222314f6cb52d00685d3d02ae.jpg">
 </body>
 </html>
